implementation retrofit and consume home with country default (#3)